v2.9.5   - Made audio track selection not throw when invalid tracks
	   are used.  If an invalid track is used, the audio is
	   muted ( track is -1 ).
	 - Same thing with subtitle track.
	 - Bug fixed Media Info Window not updating on frame change.
	 - Improved performance of OpenEXR reader a tad.

v2.9.4   - RMB->Pixel->Copy Pixel Value now respects lut and
	   gamma if active.
	 - Changing volume or audio track now effects both 
	   stereo images.
	 - Bug fixed avi saver to work with images whose
	   resolution is not a multiple of two.
	 - Bug fixed thumbnail creation when image is not
	   a multiple of two.
	 - Bug fixed gaps in cache that would appear in timeline
	   when playing in loop.
	 - Updated to latest ffmpeg version.
	 - Changed 'o' alpha overlay shortcut to 'v', to avoid clash
	   with 'o' in changing timeline out point.
	 - Made channel list work with submenus, for easier access
	   and less clutter.
	 - Added stereo interlaced to show images interlaced.  For
	   this to work it is necessary to be in zoom 1.0 or
	   presentation mode.
	 - Bug fixed installation on Linux relying on symlinks.

v2.9.3   - Bug fixed saving of OpenExr files when data window was
	   smaller than display window.  Previously it would crash.
	 - Bug fixed a number of memory leaks.
	 - Bug fixed fit image when in stereo side by side mode.
	 - Bug fixed saving of files in start directory instead of
	   directory set in file requester.
	 - Added support for stereo loading of two set of images
	   or two sets of movie files with a common prefix.  The
	   syntax is a single letter prefix or a full keyword:
	   Examples:
	   	  rootname.prefix.number.extension
		  da20.L.0001.exr
		  da20.R.0001.exr
           For movies:
		  rootname.prefix.extension
		  da20.left.mov
		  da20.right.mov

           In the file requester, the movies and sequences
	   will appear as:
	      	  da20.%v.mov      # for da20.L|R.mov
		  da20.%V.%04d.exr # for da20.left|right.0001.exr
